--- a/D_Web_Development_2/02. Settings.ipynb
+++ b/D_Web_Development_2/02. Settings.ipynb
@@ -82,7 +82,7 @@
     "\n",
     "## `INSTALLED_APPS`\n",
     "\n",
-    "Apps must be registered to Django's settings for it to be recognized. This is done by adding it to the `INSTALLED_APPS` list.\n",
+    "Apps must be registered to Django's for them to be recognized. This is done by adding it to the `INSTALLED_APPS` list.\n",
     "\n",
     "## `DEBUG`\n",
     "\n",
