--- a/D_Web_Development_2/03. Django Models and ORM.ipynb
+++ b/D_Web_Development_2/03. Django Models and ORM.ipynb
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One the server restarts, it can detect the changes in our model. You can now run the __`python manage.py makemigrations`__ command. If it succeeds, the created migration scripts will be shown. Now you can use the __`python manage.py migrate`__ command to run the migrations. Whenever we update a model, use the same process of making migrations to create migration scripts and migrate to apply them to the database.\n",
+    "Once the server restarts, it detects the changes in our model and informs us about it. You can now run the __`python manage.py makemigrations`__ command. If it succeeds, the created migration scripts will be shown. Now you can use the __`python manage.py migrate`__ command to run the migrations. Whenever we update a model, use the same process of making migrations to create migration scripts and migrate to apply them to the database.\n",
     "\n",
     "## Modifying Existing Models\n",
     "\n",
@@ -100,11 +100,11 @@
     "Select an option:\n",
     "```\n",
     "\n",
-    "The problem is exactly what the error says. We are adding new columns to our database and our existing rows will have those new columns. The database needs to populate it for existing entries but it doesn't know what to put. We need to provide values.\n",
+    "The problem is exactly what the error says. We are adding new columns to our database and our existing rows will have those new columns. The database needs to populate it for existing entries but it doesn't know what value to put. We need to provide values. We can also make it nullable.\n",
     "\n",
     "## [Field Options](https://docs.djangoproject.com/en/dev/ref/models/fields/#field-options)\n",
     "\n",
-    "When adding new fields to an existing model, either a default is required or it must be nullable. This is because existing rows will have new columns added but have no value. Let's null a field and add a default. Check the [documentation](https://docs.djangoproject.com/en/dev/ref/models/fields/) for details on [null](https://docs.djangoproject.com/en/dev/ref/models/fields/#null) and [blank](https://docs.djangoproject.com/en/dev/ref/models/fields/#blank) (they usually go together), and [default](https://docs.djangoproject.com/en/dev/ref/models/fields/#default)."
+    "When adding new fields to an existing model, either a default is required or it must be nullable. This is because existing rows will have new columns added but have no value. Let's have a nullable field and also a that has a default. Check the [documentation](https://docs.djangoproject.com/en/dev/ref/models/fields/) for details on [null](https://docs.djangoproject.com/en/dev/ref/models/fields/#null) and [blank](https://docs.djangoproject.com/en/dev/ref/models/fields/#blank) (they usually go together), and [default](https://docs.djangoproject.com/en/dev/ref/models/fields/#default)."
    ]
   },
   {
@@ -136,9 +136,7 @@
     "\n",
     "We demonstrated a few fields in our model. the [`CharField`](https://docs.djangoproject.com/en/dev/ref/models/fields/#charfield), [`Imagefield`](https://docs.djangoproject.com/en/dev/ref/models/fields/#imagefield), and [`DateField`](https://docs.djangoproject.com/en/dev/ref/models/fields/#datefield). There are many more fields available for different data types.\n",
     "\n",
-    "Django's default behavior is to give each model an auto-incrementing `id` field. This is an example of [`AutoField`](https://docs.djangoproject.com/en/dev/ref/models/fields/#autofield).\n",
-    "\n",
-    "Checkboxes are examples of [`BooleanField`](https://docs.djangoproject.com/en/dev/ref/models/fields/#booleanfield).\n",
+    "Django's default behavior is to give each model an auto-incrementing `id` field. This is an example of [`AutoField`](https://docs.djangoproject.com/en/dev/ref/models/fields/#autofield). Checkboxes are examples of [`BooleanField`](https://docs.djangoproject.com/en/dev/ref/models/fields/#booleanfield).\n",
     "\n",
     "At first, it may take a little research to find the right field type for your data. But you'll easily get familiar with the common ones as you use them. If there's a specific data type that's not covered by built-in fields, or you want a custom implementation, there are always third-party packages or you can create your own custom field. The [documentation](https://docs.djangoproject.com/en/dev/ref/models/fields/) provides the more details about each one.\n",
     "\n",
@@ -167,13 +165,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you haven't registered a superuser yet, we need one now so you can login to __`admin/`__. We just plainly registered our model to the admin. It can in fact be customized in many ways. You'll see how to do that in the documentation and other tutorials. Just registering the model allows us to interact with it already, without making any views or controllers. This speeds up feedback and we can fix things faster. \n",
+    "If you haven't registered a superuser yet, you'll need one now so you can login to __`admin/`__. We just plainly registered our model to the admin. It can in fact be customized in many ways. You'll learn how to do that in the documentation and other tutorials. Just registering the model allows us to interact with it already, without making any views or controllers. This speeds up feedback and we can fix things faster. \n",
     "\n",
     "## [Using Models](https://docs.djangoproject.com/en/dev/ref/models/)\n",
     "\n",
     "### [QuerySet](https://docs.djangoproject.com/en/dev/ref/models/querysets/#django.db.models.query.QuerySet.order_by)\n",
     "\n",
-    "Open a terminal window and run the __`python manage.py shell`__ command. We need to do use the command so Django can setup its environment. We'll use our model from the shell just so we can see what the code is like and see the results right away. Code that works here can be easily rewritten in `views.py`.\n",
+    "Open a terminal window and run the __`python manage.py shell`__ command. We need to use the command so Django can setup its environment. We'll use our model from the shell just so we can see what the code is like and see the results right away. Code that works here can be easily rewritten in `views.py`.\n",
     "\n",
     "Let's import our class and retrieve data from the database."
    ]
@@ -213,7 +211,7 @@
    "outputs": [],
    "source": [
     "# In the shell (python manage.py shell)\n",
-    "profile = Profile(name=\"Guido Van Rossum\")\n",
+    "profile = Profile.objects.create(name=\"Guido Van Rossum\") or Profile(name=\"Guido Van Rossum\")\n",
     "profile.save()"
    ]
   },
@@ -277,6 +275,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The local server should detect changes and restart. Now let's try that again."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -325,16 +330,9 @@
    "source": [
     "That updates our info in the database. Django knows if it's the same instance. If you change any of its attributes and call `.save()` on it, the database is updated.\n",
     "\n",
-    "The local server should detect changes and restart. Now let's try that again."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Primary Keys\n",
     "\n",
-    "Let's get an object from our `QuerySet`. This time We'll do it by slicing the result."
+    "Let's get an object from our `QuerySet`. This time We'll do it by accessing the index in the list."
    ]
   },
   {
@@ -381,7 +379,7 @@
     "\n",
     "### Filtering and Excluding\n",
     "\n",
-    "Usually we want just a small part of the data so we don't want to slow shings down by querying all the data then filtering it again. We used `.all()` to retrieve all our data. Now we'll use the __`.filter()`__ and __`.exclude()`__ methods to retrieve a limited set."
+    "Usually we want just a small part of the data so we don't want to slow things down by querying all the data then filtering it again. We used `.all()` to retrieve all our data. Now we'll use the __`.filter()`__ and __`.exclude()`__ methods to retrieve a limited set."
    ]
   },
   {
@@ -472,7 +470,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If objects with `id`s of 1 and 2 exist, this will return an error because if `.get()` returns more than one result, it instead returns an error. Field lookups also work in `.get()` calls.\n",
+    "If objects with `id`s of 1 and 2 exist, this will return an error because `.get()` can only return one instance. Field lookups also work in `.filter()` calls.\n",
     "\n",
     "### Deleting\n",
     "\n",
@@ -503,7 +501,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That's it! There's __`.save()`__, there's also __`.delete()`__.\n",
+    "That's it! There's __`.save()`__, there's also __`.delete()`__. \n",
     "\n",
     "### [Relationships](https://docs.djangoproject.com/en/dev/ref/models/fields/#module-django.db.models.fields.related)\n",
     "\n",
@@ -511,7 +509,7 @@
     "\n",
     "#### ForeignKey\n",
     "\n",
-    "This field represents a many-to-one relationship. Relationships can be created by passing the model name as the argument to a relationship field like ForeignKey. The name can be the model class name itself, or the class name as a string. Strings will work for models that haven't been defined yet. For an object to create a recursive relationship with itself, the string 'self' is used.\n",
+    "This field represents a many-to-one relationship. Relationships can be created by passing the model name as the argument to a relationship field like ForeignKey. The name can be the model class name itself, or the class name as a string. Strings will work for models that haven't been defined yet. For an object to create a recursive relationship with itself, the string `'self'` is used.\n",
     "\n",
     "Let's imagine that in our app, our users can be friends with each other so one will have relationship with many other profiles. Let's do that."
    ]
@@ -671,7 +669,7 @@
    "source": [
     "#### Django User Model\n",
     "\n",
-    "Referring directly to the `User` model won't work in projects or apps that use a custom `User` model. Another way to refer to the `User` is by using the `AUTH_USER_MODEL` setting. This way, when a custom `User` is used, your related model will still refer to the right model. This is the recommended way to add information about your users and create a relationship with the `User` model."
+    "Referring directly to the `User` model won't work in projects or apps that use a custom `User` model. Another way to refer to the `User` is by using the `AUTH_USER_MODEL` setting. This way, when a custom `User` is used, your related model will still refer to the right model. This is the recommended way to add information about your users, refer to the `User` model and create a relationship with the `User` model."
    ]
   },
   {
