--- a/D_Web_Development_2/04. Views and URLs.ipynb
+++ b/D_Web_Development_2/04. Views and URLs.ipynb
@@ -92,19 +92,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The URLs of our `account` app has been added to the `account/` namespace in our app. When a user navigates to this url, Django searches URL patterns within the included app. Our empty string pattern matches the root of that address so navigating to the address `account/` calls our function.\n",
+    "The URLs of our `account` app has been added to the `account/` path in our app. When a user navigates to this path, Django searches URL patterns within the included app. Our empty string pattern matches the root of that address so navigating to the address `account/` calls our function.\n",
     "\n",
     "If no server is running, use the `python manage.py runserver` command to have one running so we can see the results. In your browser, navigate to [127.0.0.1:8000/account/](http://127.0.0.1:8000/account/) to see the result.\n",
     "\n",
-    "\n",
     "![Web_Dev2](./images/img_hello_world.png)\n",
-    "\n",
     "\n",
     "Congratulations! You made Django work!\n",
     "\n",
     "## [Render](https://docs.djangoproject.com/en/dev/topics/http/shortcuts/#render)\n",
     "\n",
-    "We can show text but that's that's quite boring. Let's show some real HTML! Let's create a new function that does that. There are many ways to do this in Django. Let's try the commonly used `render()` function."
+    "We can already show text but that's that's quite boring. Let's show some real HTML! Let's create a new function that does that. There are many ways to do this in Django. Let's try the commonly used `render()` function."
    ]
   },
   {
@@ -128,9 +126,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `render()` function accepts the request object, a template string and a context dictionary. Not only can be show any template we want, we can add any variable into the page's context.\n",
+    "The `render()` function accepts the request object, a template string and a context dictionary. Not only can we show any template we want, we can add any variable into the page's context.\n",
     "\n",
-    "Before proceeding in modifying our App URLs, let's change some settings in our our **`settings.py`** file first. As mentioned in notebook no.1 (_Introduction to Django_), we can specify a list of paths in the `DIRS` key and Django will include those in its search.\n",
+    "Before proceeding to modify our App URLs, let's change some settings in our our **`settings.py`** file first. As mentioned in _Introduction to Django_ and _Settings_, we can specify a list of paths in the `DIRS` key and Django will include those in its search.\n",
     "\n",
     "Go to `settings.py` and let's modify the template path like so:\n",
     "```\n",
@@ -175,7 +173,7 @@
     "Remember that this app lives under the `account/` URL. Our second function can be reached if a user navigates to `account/render/`. But we don't have a template yet so let's create one:\n",
     "\n",
     "1. Inside your project folder, create a folder named **`'templates'`**.\n",
-    "2. Inside the 'templates' folder that you just created, create an empty file and name it **`'templates.html'`**\n",
+    "2. Inside the 'templates' folder that you just created, create an empty file and name it **`'template.html'`**\n",
     "\n",
     "Your directory should now look like this:\n",
     "```\n",
@@ -188,13 +186,13 @@
     "      └── template.html\n",
     "```\n",
     "\n",
-    "The **`templates`** folder is relative to our **`manage.py`** file. \n",
+    "The **`templates`** folder is at the same level as our **`manage.py`** file. \n",
     "\n",
     "## Template \n",
     "\n",
     "Our new view adds a variable in the page context. Not only will we make an HTML page appear, we'll be able to add variables to it. Let's have a simple template showing our variable. We'll get more into templates in the next notebook. For now, it's good enough that we can show variables sent to the page's context.\n",
     "\n",
-    "#### Note:  Copy the sample html code below and paste it on the **`'template.html`** file that you have created earlier'"
+    "#### Note:  Copy the sample html code below, excluding the `%%html` line, and paste it on the **`template.html`** file that you created earlier'"
    ]
   },
   {
@@ -240,7 +238,7 @@
     "* an object, its __[`get_absolute_url()`](https://docs.djangoproject.com/en/dev/ref/models/instances/#django.db.models.Model.get_absolute_url)__ method will be called.\n",
     "* a hardcoded relative or absolute URL\n",
     "* the dotted Python path to the view function as a string\n",
-    "* the name of a URL pattern (which will be looked up using the [`reverse()`](https://docs.djangoproject.com/en/dev/ref/urlresolvers/#django.core.urlresolvers.reverse) function)\n",
+    "* the name of a URL pattern (which will be looked up using the [`reverse()`](https://docs.djangoproject.com/en/dev/ref/urlresolvers/#django.core.urlresolvers.reverse) function, this is the recommended one to use)\n",
     "\n",
     "## Named URL patterns\n",
     "\n",
@@ -439,7 +437,7 @@
     "\n",
     "## [Custom 404 Page](https://docs.djangoproject.com/en/dev/topics/http/views/#the-http404-exception)\n",
     "\n",
-    "Right now, we're seeing one of Django's debug pages. To show a custome 404 error page, we'll follow the instruction on the page. In `settings.py`, change the value of __`DEBUG`__ to __`False`__. When the server restarts and we visit the page again, we'll see an error printed in the console:\n",
+    "Right now, we're seeing one of Django's debug pages. To show a custom 404 error page, we'll follow the instruction on the page. In `settings.py`, change the value of __`DEBUG`__ to __`False`__. When the server restarts and we visit the page again, we'll see an error printed in the console:\n",
     "\n",
     "`CommandError: You must set settings.ALLOWED_HOSTS if DEBUG is False.`\n",
     "\n",
@@ -449,7 +447,7 @@
     "\n",
     "## [Passing Arguments in the URL](https://docs.djangoproject.com/en/dev/topics/http/urls/#example)\n",
     "\n",
-    "To capture a value from a URL, just put parentheses around it. Here are some examples:"
+    "To capture a value from a URL, just put parentheses around the `regex` pattern that checks for it. Here are some examples:"
    ]
   },
   {
