--- a/D_Web_Development_2/01. Introduction to Django.ipynb
+++ b/D_Web_Development_2/01. Introduction to Django.ipynb
@@ -25,9 +25,14 @@
     "\n",
     "### MVC\n",
     "\n",
-    "Each Django app follows the Model-View-Controller (MVC) architectural pattern. In your __`account/`__ folder, there's a __`models.py`__ file where all the related classes related to accounts are defined. There's a __`views.py`__ file, which is actually the controller where all your business logic related to accounts are written. The template is your view. This is the __`*.html`__ file, which is normal HTML plus Django template tags. There's also a __`urls.py`__ file that lets you map out your controllers to URL addresses. Django has a built-in admin functionality that lets you quickly test your models without having to build views and controllers. All you have to do is register your models to the admin using the __`admin.py`__ file. It's not restricted to this list. In fact, you can create any file or folder (but there are conventions). Some will also be created once certain actions are performed like when creating models migrations, a __`migrations/`__ folder is created containing migration scripts. All your Django apps will have most of these elements.\n",
+    "Each Django app follows the Model-View-Controller (MVC) architectural pattern. In your __`account/`__ folder, there's a __`models.py`__ file where all the classes related to accounts are defined. There's a __`views.py`__ file, which is actually the controller where all your business logic related to accounts reside. The template is your view. This is the __`*.html`__ file, which is normal HTML plus Django template tags. There's also a __`urls.py`__ file that lets you map out your controllers to URL addresses. Django has a built-in admin functionality that lets you quickly test your models without having to build views and controllers. All you have to do is register your models to the admin using the __`admin.py`__ file.\n",
     "\n",
-    "Django looks for templates in several ways. One of Django's behaviors is to look for them in a __`templates/`__ folder within an app. This behavior can be turned off by setting `'APP_DIRS': False` in the `TEMPLATES` list in the `settings.py` file. Another way is by specifying a list of paths in the `DIRS` key and Django will include those in its search.\n",
+    "The files or folders are not restricted to this list. In fact, you can create any file or folder but be aware that there are some conventions. Some files or folders may also be created when certain commands are executed like when creating model migrations, a __`migrations/`__ folder is created containing migration scripts. Django apps will have most of these elements.\n",
+    "\n",
+    "\n",
+    "### Templates\n",
+    "\n",
+    "Django looks for templates in several ways. One of Django's behaviors is to look for them in a __`templates/`__ folder within each app. This behavior can be turned off by setting `'APP_DIRS': False` in the `TEMPLATES` list in the `settings.py` file. Another way is by specifying a list of paths in the `DIRS` key and Django will include those in its search.\n",
     "\n",
     "```\n",
     "TEMPLATES = [\n",
@@ -38,7 +43,7 @@
     "]\n",
     "```\n",
     "\n",
-    "There is another folder with the name of your project with a different set of files. Specifically, it has __`settings.py`__, __`urls.py`__ and __`wsgi.py`__. We'll talk about the details of the project package folder later but these are most of what you can expect.\n",
+    "There is another folder with the name of your project with a different set of files. Specifically, it has __`settings.py`__, __`urls.py`__ and __`wsgi.py`__. We'll talk about the details of the project package folder later but these are most of what you can expect in an app folder:\n",
     "\n",
     "* models.py\n",
     "* views.py\n",
@@ -153,7 +158,7 @@
     "\n",
     "![Web_Dev2](./images/img_it_worked.png)\n",
     "\n",
-    "This starts a local server so we can run our project locally. Whenever we want to see the changes we made or to just browse the site, we do this. We can also have a separate tab running this in the shell and it will auto-reload whenever it detects changes in the project. Sometimes, it takes a while for it to detect changes.\n",
+    "This starts a local server so we can run our project locally. Whenever we want to see the changes we made or to just browse the site, we do this. We can also have a separate tab running this in the shell and it will auto-reload whenever it detects changes in the project. Sometimes, it takes a while for it to detect changes and sometimes it also catches errors that prevent it from reloading.\n",
     "\n",
     "\n",
     "```\n",
@@ -252,17 +257,17 @@
    "source": [
     "This detects any changes and creates scripts that translate new models or changes to existing models into scripts that the database can understand. Scripts aren't executed, only prepared and placed in a __`migrations/`__ folder. The actual execution of the script is done by the __`migrate`__ command.\n",
     "\n",
-    "The scripts are dependent on each other and preserve their order. It would be best to know exactly what you're doing before tampering with them or use the other related management commands.\n",
+    "The scripts are dependent on each other and the order is preserved. It would be best to know exactly what you're doing before tampering with them or use the other related management commands.\n",
     "\n",
     "### Use the Shell\n",
     "\n",
-    "Django provides a command that starts a Python interpreter. It's convenient for exploring and testing code before or after writing them in your app. It automatically uses IPython if you have it installed.\n",
+    "Django provides a command that starts a Python interpreter with Django settings already setup. It's convenient for exploring and testing code before or after writing them in your app. It automatically uses [IPython](http://ipython.org/) if you have it installed.\n",
     "\n",
     "### Create Superuser\n",
     "\n",
     "Make a super user account:\n",
     "\n",
-    "(This commend needs to be ran in the shell. It asks for an input that doesn't work from within Jupyter)"
+    "(This command needs to be ran in the shell. It asks for an input that doesn't work from within Jupyter)"
    ]
   },
   {
@@ -302,7 +307,7 @@
     "\n",
     "### Others\n",
     "\n",
-    "There are other management commands. You can even make your own. Right now this is what we'll need and we'll learn others along the way.\n",
+    "There are other management commands available. You can even make your own. Right now this is what we'll need and we'll learn others along the way.\n",
     "\n",
     "\n",
     "## Workflow\n",
@@ -336,7 +341,7 @@
     "# edit models.py and view in admin/\n",
     "\n",
     "# Whenever an app's model is changed\n",
-    "python manage.py makemigrations  # them migrate and view in admin/\n",
+    "python manage.py makemigrations  # then migrate and view in admin/\n",
     "\n",
     "# edit views.py and urls.py\n",
     "\n",
