--- a/D_Web_Development_2/05. Templates and Forms.ipynb
+++ b/D_Web_Development_2/05. Templates and Forms.ipynb
@@ -243,7 +243,7 @@
     "from account.models import Profile\n",
     "\n",
     "\n",
-    "class ProfileForm(ModelForm):\n",
+    "class ProfileModelForm(ModelForm):\n",
     "\n",
     "    class Meta:\n",
     "        model = Profile\n",
@@ -295,11 +295,11 @@
    "outputs": [],
    "source": [
     "%%html\n",
-    "from .forms import ProfileForm\n",
+    "from .forms import ProfileModelForm\n",
     "\n",
     "def form_view(request):\n",
     "    template = \"template.html\"\n",
-    "    form = ProfileForm()\n",
+    "    form = ProfileModelForm()\n",
     "    context = {\n",
     "        \"form\": form,\n",
     "    }\n",
@@ -378,7 +378,7 @@
    },
    "outputs": [],
    "source": [
-    "    form = ProfileForm(request.POST or None)"
+    "    form = ProfileModelForm(request.POST or None)"
    ]
   },
   {
